@@ -108,7 +108,7 @@ install-exec-local::
 endif
 
 bpmodulesdir = $(datadir)/bp_modules
-nobase_bpmodules_DATA = BatchParallel/common.pm BatchParallel/compress.pm BatchParallel/jobsfile.pm BatchParallel/checksum.pm
+nobase_bpmodules_DATA = BatchParallel/common.pm BatchParallel/compress.pm BatchParallel/jobsfile.pm BatchParallel/checksum.pm BatchParallel/tar.pm
 
 perllibdir = $(datadir)/perl5
 nobase_perllib_DATA = Text/Expand.pm Text/ExpandInt.pm Plot/Mercury.pm Plot/Mercury/Tics.pm Lintel/Net/SSH/KnownHostsFile.pm
