@@ -1,3 +1,7 @@
+2008-02-14:
+   * Added tar batch-parallel module for taking a group of files in
+     directories and creating tar files out of them of a specified size.
+
 2008-02-08:
    * Added documentation generation/installation; depends on cmake to work
      since eventually we will transition entirely to cmake.
